--- a/index.html
+++ b/index.html
@@ -36,22 +36,25 @@
                     <i class="fa-solid fa-location-dot"></i>
                 </label>
                 <input placeholder="Marseille, France" class="search" id="search" type="text">
-                <button class="button-search" type="submit">Rechercher</button>
+                <button class="button-search" type="submit">
+                    <span>Rechercher</span>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
             </form>
             <div class="filtres-card">
                 <h2 class="titre-filtre">Filtres</h2>
                 <div class="filtres">
-                    <div class="filtre">
+                    <div class="filtre first">
                         <button class="button-filtre" type="submit"><i class="fa-solid fa-money-bill-wave"></i><span>Économique</span></button>
                     </div>
-                    <div class="filtre">
-                        <button class="button-filtre" type="submit"><i class="fa-solid fa-child-reaching"></i>Familial</button>
+                    <div class="filtre second">
+                        <button class="button-filtre" type="submit"><i class="fa-solid fa-child-reaching"></i><span>Familial</span></button>
                     </div>
                     <div class="filtre">
-                        <button class="button-filtre" type="submit"><i class="fa-solid fa-heart"></i><p>Romantique</p></button>
+                        <button class="button-filtre" type="submit"><i class="fa-solid fa-heart"></i><span>Romantique</span></button>
                     </div>
-                    <div class="filtre">
-                        <button class="button-filtre" type="submit"><i class="fa-solid fa-dog"></i><p>Animaux autorisés</p></button>
+                    <div class="filtre last">
+                        <button class="button-filtre" type="submit"><i class="fa-solid fa-dog"></i><span>Animaux autorisés</span></button>
                     </div>
                 </div>
             </div>
@@ -60,13 +63,13 @@
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
         </section> 
-        <section id="contener-hebergements" class="teste">
+        <section id="contener-hebergements" class="contener-general">
             <div class="contener-hebergements">
                 <h2 class="hebergement-title">Hébergements à Marseille</h2>
                 <div class="contener-cards">
                     <a class="hebergement-card" href="#">
                         <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
-                        <div class="test-card-center">
+                        <div class="contener-card-center">
                             <h3>Auberge La Cannebière</h3>
                             <p>Nuit à partir de 25€</p>
                             <div class="stars">
@@ -80,7 +83,7 @@
                     </a>
                     <a class="hebergement-card" href="#">
                         <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
-                        <div class="test-card-center">
+                        <div class="contener-card-center">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52€</p>
                             <div class="stars">
@@ -94,7 +97,7 @@
                     </a>
                     <a class="hebergement-card" href="#">
                         <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
-                        <div class="test-card-center">
+                        <div class="contener-card-center">
                             <h3>Hôtel les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
                             <div class="stars">
@@ -108,7 +111,7 @@
                     </a>
                     <a class="hebergement-card" href="#">
                         <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
-                        <div class="test-card-center">
+                        <div class="contener-card-center">
                             <h3>Hôtel de la mer</h3>
                             <p>Nuit à partir de 46€</p>
                             <div class="stars">
@@ -122,7 +125,7 @@
                     </a>
                     <a class="hebergement-card" href="#">
                         <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier">
-                        <div class="test-card-center">
+                        <div class="contener-card-center">
                             <h3>Auberge le panier</h3>
                             <p>Nuit à partir de 23€</p>
                             <div class="stars">
@@ -136,7 +139,7 @@
                     </a>
                     <a class="hebergement-card" href="#">
                         <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
-                        <div class="test-card-center">
+                        <div class="contener-card-center">
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de 96€</p>
                             <div class="stars">
