--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </label>
                 <input placeholder="Marseille, France" class="search" id="search" type="text">
                 <button class="button-search" type="submit">
-                    <span>Rechercher</span>
+                    <span><b>Rechercher</b></span>
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </form>
@@ -219,35 +219,29 @@
                 <a class="activite-card" href="#">
                     <img class="big" src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
                         <h3>Vieux Port</h3>
-                        <p></p>
                 </a>
                 <div class="contener-sub-cards">
                     <a class="activite-sub-card" href="#">
                         <img class="medium" src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de pomègues">
                         <h3>Fort de pomègues</h3>
-                        <p></p>
                     </a>
                     <a class="activite-sub-card" href="#">
                         <img class="ultra-small" src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
                         <h3>Îles du Frioul</h3>
-                        <p></p>
                     </a>
                 </div>
                 <a class="activite-card" href="#">
                     <img class="big" src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
                     <h3>Parc National des Calanques</h3>
-                    <p></p>
                 </a>
                 <div class="contener-sub-cards">
                     <a class="activite-sub-card" href="#">
                         <img class="small" src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                         <h3>Notre-Dame-de-la-Garde</h3>
-                        <p></p>
                     </a>
                     <a class="activite-sub-card" href="#">
                         <img class="medium" src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
                         <h3>Parc Longchamp</h3>
-                        <p></p>
                     </a>
                 </div>
             </div>
